# Assignment2

./: .gitignore  LICENSE  README.md  __init__.py  app.json  app.py  basic.py  cart.py  checkout_calculator  forms.py  item.py  pyproject.toml  requirements.txt
src/checkoutcalculator/: __init__.py  cart.py
static/: interface.js
templates/: index.html  interface.js
tests/: README.md  test_checkoutcalculator.py
