[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkoutcalculator"
version = "0.0.1"
authors = [
  { name="Kyle Oh", email="inohkr@gmail.com" },
  { name="Kerry Li", email="aca.kerry.li@gmail.com}
]
description = "A simple checkoutcalculator package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kyleisoh/Deliverable2"